--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap");
 
 @import "tailwindcss";
+
