some hr line and image fixex

--- a/src/app/components/bond-cards/bond-cards.html
+++ b/src/app/components/bond-cards/bond-cards.html
@@ -38,15 +38,19 @@
                 
                 <span>₹9,944</span>
 
+                <!-- Left Line -->
                 <div class="flex-1 flex justify-center">
-                <div class="w-20 h-[1px] bg-[#2C7704] rounded"></div>
+                <div class="h-[1px] rounded bg-[#2C7704] w-[40px] sm:w-[90px]"></div>
                 </div>
+
 
                 <span>22 Months</span>
 
+               <!-- Left Line -->
                 <div class="flex-1 flex justify-center">
-                <div class="w-20 h-[1px] bg-[#2C7704] rounded"></div>
+                <div class="h-[1px] rounded bg-[#2C7704] w-[40px] sm:w-[90px]"></div>
                 </div>
+
 
                 <span class="text-[#2C7704]">11.0%</span>
 
