--- a/src/app/components/steps-section/steps-section.html
+++ b/src/app/components/steps-section/steps-section.html
@@ -1,4 +1,4 @@
-<div class="border-b border-gray-300 mt-6"></div>
+<!-- <div class="border-b border-gray-300 mt-6"></div> -->
 <section class="steps-section py-14">
   <div class="steps-container mx-auto relative">
 
@@ -15,7 +15,7 @@
     <!-- Image -->
     <div class="steps-image-wrapper">
       <img
-        src="assets/selection-trends.png"
+        src="assets/5-steps-Image.svg"
         alt="Investment Steps"
         class="steps-image"
       />
