--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -20,14 +20,12 @@
 
     <!-- RIGHT IMAGE -->
     <img
-      src="/assets/rupee-greens.png"
-      alt="rupee"
-      class="rupee-img w-[130px] md:w-[230px] lg:w-[200px] -mt-6"
+      src="/assets/rupee-greens.png" alt="rupee" class="rupee-img w-[111px] md:w-[230px] lg:w-[174px] -mt-6"
     />
 
   </div>
 
-  <!-- FULL-WIDTH MOBILE DIVIDER - ALWAYS CENTERED -->
+  
   <div class="lg:hidden flex justify-center mt-6">
     <div
       class="w-[200px] h-[1px] rounded-full bg-[linear-gradient(90deg,#626262_0%,#C4C3C3_50%,#626262_100%)]">
@@ -113,6 +111,20 @@
       </div>
     </div>
   </section>
+ <div class="hidden lg:flex justify-center mt-6">
+  <div class="w-[900px] h-[2px] rounded-full 
+    bg-[linear-gradient(90deg,#FFFFFF_0%,#C3C3C3_50%,#FFFFFF_100%)]
+    blur-[1px]">
+  </div>
+</div>
+
+<div class="lg:hidden flex justify-center mt-6">
+  <div class="w-[200px] h-[2px] rounded-full 
+    bg-[linear-gradient(90deg,#FFFFFF_0%,#C3C3C3_50%,#FFFFFF_100%)]
+    blur-[1px]">
+  </div>
+</div>
+
 
   <app-steps-section></app-steps-section>
 
