some hr line and image fixex new

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -27,10 +27,11 @@
 
   
   <div class="lg:hidden flex justify-center mt-6">
-    <div
-      class="w-[200px] h-[1px] rounded-full bg-[linear-gradient(90deg,#626262_0%,#C4C3C3_50%,#626262_100%)]">
-    </div>
+  <div class="w-[300px] h-[1px] rounded-full 
+    bg-[linear-gradient(90deg,#FFFFFF_0%,#C3C3C3_50%,#FFFFFF_100%)]
+    blur-[1px]">
   </div>
+</div>
 
 </section>
 
@@ -119,7 +120,7 @@
 </div>
 
 <div class="lg:hidden flex justify-center mt-6">
-  <div class="w-[200px] h-[2px] rounded-full 
+  <div class="w-[300px] h-[1px] rounded-full 
     bg-[linear-gradient(90deg,#FFFFFF_0%,#C3C3C3_50%,#FFFFFF_100%)]
     blur-[1px]">
   </div>
